# code-reviewer-agent

./: .coveragerc  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  agent.py  agent_init.py  agent_model.py  agent_prompts.py  agent_tools.py  code_review_agent.py  code_reviewer_agent.spec  configure_langfuse.py  crawler_agent.py  langfuse_decorators.py  langfuse_integration.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml  release.yml  security.yml
PRPs/: apply-solid-principles.md  implement-comprehensive-test-coverage.md
code_reviewer_agent/: __init__.py  __main__.py  default_config.yaml  setup_env.py
code_reviewer_agent/config/: __init__.py  config.py
code_reviewer_agent/instructions/: review_instructions.md
code_reviewer_agent/models/: agent.py  base_agent.py  base_types.py  crawler_agents.py  provider_factory.py  pydantic_config_models.py  pydantic_reviewer_models.py  reviewer_agent.py  supabase.py
code_reviewer_agent/prompts/: agent.py  cr_agent.py
code_reviewer_agent/services/: base_service.py  code_reviewer.py  configuration_manager.py  contextual_retrieval.py  crawler.py  crawler_read.py  crawler_write.py  github.py  gitlab.py  platform_factory.py  repository.py  review_file_processor.py  review_orchestrator.py
code_reviewer_agent/utils/: __init__.py  config.py  crawler_utils.py  file_utils.py  instruction_loader.py  langfuse.py  language_utils.py  rich_utils.py
docs/: langfuse_integration.md
feature-requests/: apply-solid-principles.md  implement-coverage.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: __init__.py  deps.py
models/pr/: __init__.py  models.py
scripts/: configure_langfuse.py
supabase/: documents.sql  match_documents.sql
tests/: __init__.py  conftest.py  test_contextual_retrieval.py  test_main.py
tests/integration/: test_end_to_end.py
tests/test_config/: test_config.py
tests/test_models/: test_base_types.py  test_config_models.py  test_reviewer_agent.py
tests/test_services/: test_crawler_read.py
tests/test_utils/: test_langfuse.py  test_language_utils.py  test_rich_utils.py  test_rich_utils_comprehensive.py
tools/: README.md  __init__.py  diff_parsing.py  git_operations.py  llm_utils.py  rate_limiting.py  utils.py
